Resolves: tdf#59896 ww6 plcf generation reversed check

regression since...

commit 69e040a59e1c6497b606da8a27e8f605edd041bb
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Sun Jul 17 00:19:00 2011 +0100

    check seeks, check available size, pointers to ref

Change-Id: Idfcde46959e5693d200a91a619e7196f00f40ca0